[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "repoprobe"
version = "0.1.0"
description = "cli-based managed execution assurance system for ai-generated software"
requires-python = ">=3.12"
dependencies = [
    "typer[all]>=0.9.0",
    "rich>=13.0.0",
    "textual>=0.40.0",
    "google-genai>=1.55.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",
]

[project.scripts]
repoprobe = "repoprobe.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/repoprobe"]
